# forecasters_edge

./: .eslintrc.json  .gitignore  BACKEND_PLAN.md  CLAUDE.md  README.md  STATIC_FILES_PLAN.md  TESTING.md  about.cad4fa1f.js  about.cad4fa1f.js.map  about.html  forecasters-edge.84a0d4c9.js  forecasters-edge.9bbd427e.css  forecasters-edge.9bbd427e.css.map  forecasters-edge.b1751ed0.css  forecasters-edge.b1751ed0.css.map  forecasters-edge.b2625c6b.css  forecasters-edge.b2625c6b.css.map  forecasters-edge.d9a3fdc6.js  forecasters-edge.d9a3fdc6.js.map  forecasters-edge.fb736eb8.js  forecasters-edge.fb736eb8.js.map  frontend.33efb9a0.js  frontend.c4058049.css  frontend.c4058049.css.map  index.6c85fdd9.js  index.6c85fdd9.js.map  index.bb0c5cc0.css  index.bb0c5cc0.css.map  index.html  package-lock.json  package.json  tsconfig.json
backend/: .dockerignore  .env  Cargo.toml  README.md  TEST_SETUP.md  TODO.txt  build_frontend.sh  send_request.py  test_rating_only.py  test_verbose.py
backend/frontend_dist/: about.html  frontend.1ce6450a.js  frontend.2a636267.css  frontend.2a636267.css.map  index.html
backend/frontend_dist/data/: usa_courses.csv
backend/migrations/: 20240101000000_initial.sql  20240711000000_make_description_optional.sql  20250111000000_make_description_optional_v2.sql
backend/src/: database.rs  lib.rs  main.rs  models.rs  time_weights.rs
backend/tests/: integration_tests.rs  test_helpers.rs
css/: style.css
data/: sample_weather_response.json  sample_weather_response_2.json  sample_weather_response_buxton.json  sample_weather_response_st_helens.json  usa_courses.csv
frontend/: CLAUDE.md  about.html  index.html  package-lock.json  package.json  tsconfig.json
frontend/css/: style.css
frontend/data/: usa_courses.csv
frontend/scripts/: add_course_ids.py  add_lat_lon_to_courses.py  dev-urls-mock.js  dev-urls.js  rename_all_files.sh
frontend/src/: weather-core.ts  weather.ts
scripts/: add_lat_long_to_courses.py  download_all_files.sh  scrape_course_data.py
src/: weather-core.ts  weather.ts
test/: weather.test.ts
(+3973 files in other folders)
