[package]
name = "forecasters-edge-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
csv = "1.3"
dotenvy = "0.15.7"
shuttle-runtime = "0.56.0"
shuttle-axum = "0.56.0"
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }

[dev-dependencies]
axum-test = "14.0"
tempfile = "3.8"
